Styled links tile, fixed header size on mobile

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -110,6 +110,7 @@ ul.responses li.incorrect p span {
     display: flex;
     padding-right: 20px;
     align-items: center;
+    justify-content: center;
 }
 
 .quizImage {
